scss/_base.scss
/* begin base.scss */

/*
Screen Reader Text
---------------------------------------------------------------------------------------------------- */

.screen-reader-text,
.screen-reader-text span,
.screen-reader-shortcut {
	position: absolute !important;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	width: 1px;
	border: 0;
	overflow: hidden;
}

.screen-reader-text:focus,
.screen-reader-shortcut:focus,
.genesis-nav-menu .search input[type="submit"]:focus,
.widget_search input[type="submit"]:focus  {
	clip: auto !important;
	height: auto;
	width: auto;
	display: block;
	font-size: 1em;
	font-weight: bold;
	padding: 15px 23px 14px;
	color: $gray-800;
	background: $white;
	z-index: 100000; /* Above WP toolbar. */
	text-decoration: none;
	box-shadow: 0 0 2px 2px rgba(0,0,0,.6);
}

.more-link {
	position: relative;
}

/*
Skip Links
---------------------------------------------------------------------------------------------------- */

.genesis-skip-link {
	margin: 0;
}

.genesis-skip-link li {
	height: 0;
	width: 0;
	list-style: none;
}

/* Display outline on focus */
:focus {
	color: $gray-800;
	outline: $gray-400 solid 1px;
}

/*
Fonts
---------------------------------------------------------------------------------------------------- */

body {
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
}

h1, h2, h3, h4, h5, h6, .site-title {
	font-family: 'Lato', sans-serif;
	font-weight: 400
}

/*
Material Icons
---------------------------------------------------------------------------------------------------- */
.material-icons {
	margin-top: -.1rem;
	padding-bottom: .1rem;
	font-size: inherit;
	line-height: inherit;
	vertical-align: middle;
}

/*
Site Structure
---------------------------------------------------------------------------------------------------- */

.home {
	.layer-wrap {
		padding-top: 3rem;
		padding-bottom: 3rem;
	}
}

.layer-wrap {
	padding-top: 1.5rem;
	padding-bottom: 1.5rem;

	// allow fluid image containers to run full bleed
	.container-fluid {
		&.image-container {
			padding-left: 0;
			padding-right: 0;
		}
	}
}

/*
Utility Widgets
---------------------------------------------------------------------------------------------------- */

.utility-widgets {
	background-color: $light;
}

/*
Site Header
---------------------------------------------------------------------------------------------------- */

.site-header-banner {

}

/* Title Area
---------------------------------------------------------------------------------------------------- */

.title-area {
	@extend .py-1;
}

.site-title {
	font-size: 36px;
	margin-bottom: 0;
}

.site-title {
	a, &a:hover {
		color: $gray-800;
	}
}

.site-header {
	.site-title {
		a {
			background-position: center !important;
			background-size: cover !important;
			margin: 0;
		}
	}
}

.header-image {
	.site-title {
		a {
			display: block;
			text-indent: -9999px;
			width: 345px;
			height: 115px;

			@include media-breakpoint-down(lg) {
				margin-left: auto;
				margin-right: auto;
				width: 285px;
				height: 95px;
			}
		}
	}
}

/*
Site Navigation
---------------------------------------------------------------------------------------------------- */

.nav-primary {
	background-color: $gray-100;
}

.nav-secondary {
	@include media-breakpoint-up(lg) {
		margin-top: 1.5rem;
		float: right;
	}

	.navbar {
		@extend .px-0;
	}

	.navbar-light {
		.navbar-toggler {
			margin-right: 2rem;

			@include media-breakpoint-down(md) {
				margin: 0 auto;
			}
		}
	}
}

/*
Archives
---------------------------------------------------------------------------------------------------- */
.post-type-archive-faq {
	#faq-accordion {
		padding-top: 1.5rem;
		padding-bottom: 1.5rem;

		.layer-wrap {
			padding-top: 0;
			padding-bottom: 0;
		}

		.entry {
			margin-bottom: 0;
		}
	}
}

/*
Layers
---------------------------------------------------------------------------------------------------- */
.carousel {
	overflow: hidden;

	.carousel-control-prev, .carousel-control-next {
		opacity: .8;
		width: 5%;
	}
}

.directory-contact {
	.directory-name {
		font-size: 1.6rem;
		text-align: center;
		letter-spacing: .05rem;
	}

	.directory-title {
		text-align: center;
		font-weight: bold;
	}
}

.home {
	.related-content-wrap {
		padding-bottom: 1.5rem;
	}
}

.related-content-wrap {
	padding-bottom: 0;

	.related-post {
		padding-bottom: 1.5rem;
	}

	.carousel {
		margin-bottom: 1.5rem;

		.related-post {
			padding-bottom: 0;
		}
	}

	.related-post-image {
		font-size: 3rem;
		text-align: center;
	}
}

/*
Site Footer Widgets
---------------------------------------------------------------------------------------------------- */

.footer-widgets {
	padding-top: 3rem;
	padding-bottom: 2rem;
	background-color: $gray-200;
}

/*
Site Footer
---------------------------------------------------------------------------------------------------- */

.site-footer {
	padding-top: 3rem;
	padding-bottom: 2rem;
	text-align: center;
	background-color: $gray-100;
}

